# experiment-magnetostatic-data-treatment

./: LICENSE  pyproject.toml
data/: champ_magnetique_distance_bz.csv  etalonage_grande_bobine_bz.csv  etalonage_grande_bobine_thomson.csv  etalonage_petite_bobine_thomson.csv  incertitudes.csv  thomson_grandes_bobines.csv  thomson_petites_bobines.csv
src/: bz_profile.py  constants.py  fit_bi_slopes.py  thomson_em.py  utils.py
